@@ -1,3 +1,9 @@
+2003-09-09  Per Bothner  <per@bothner.com>
+
+	* RelativeStep.java:  Now implements CanInline.
+	(inline):  New method.
+	(apply):  Use Nodes class and simplify.
+
 2003-08-03  Per Bothner  <per@bothner.com>
 
 	* RelativeStep.java:  New class, extends CpsProcedure.
